[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gui/ArchiveFileSelector.gd" type="Script" id=1]
[ext_resource path="res://Gui/theme.tres" type="Theme" id=2]

[node name="ArchiveFileSelector" type="ConfirmationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -87.0
margin_right = 256.0
margin_bottom = 357.0
rect_min_size = Vector2( 320, 0 )
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Select archive files"
resizable = true
dialog_text = "Select a name file and a data file to open.
"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 47.0
margin_right = -8.0
margin_bottom = -38.0
custom_constants/vseparation = 32
custom_constants/hseparation = 16
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Grid"]
margin_right = 46.0
margin_bottom = 22.0
text = "Name"

[node name="NGCLine" type="LineEdit" parent="Grid"]
margin_left = 62.0
margin_right = 333.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="NGCButton" type="Button" parent="Grid"]
margin_left = 349.0
margin_right = 400.0
margin_bottom = 22.0
text = "Select"

[node name="Label2" type="Label" parent="Grid"]
margin_top = 54.0
margin_right = 46.0
margin_bottom = 76.0
text = "Data"

[node name="DGCLine" type="LineEdit" parent="Grid"]
margin_left = 62.0
margin_top = 54.0
margin_right = 333.0
margin_bottom = 76.0

[node name="DGCButton" type="Button" parent="Grid"]
margin_left = 349.0
margin_top = 54.0
margin_right = 400.0
margin_bottom = 76.0
text = "Select"

[node name="Label3" type="Label" parent="Grid"]
margin_top = 108.0
margin_right = 46.0
margin_bottom = 130.0
text = "Type"

[node name="OptionButton" type="OptionButton" parent="Grid"]
margin_left = 62.0
margin_top = 108.0
margin_right = 333.0
margin_bottom = 130.0
text = "Nintendo Gamecube (NGC/DGC)"
align = 2
items = [ "Nintendo Gamecube (NGC/DGC)", null, false, 0, null, "Playstation 2 (NPS/DPS)", null, false, 1, null ]
selected = 0

[node name="NGCDialog" type="FileDialog" parent="."]
margin_left = 8.0
margin_top = 47.0
margin_right = 408.0
margin_bottom = 447.0
rect_min_size = Vector2( 400, 400 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_text = "Name file to open"
mode = 0
access = 2
filters = PoolStringArray( "*.NGC;*.ngc;*.NPS;*.nps" )
current_dir = "/home/jellonator/Workspace/Rust/ChumWorld"
current_path = "/home/jellonator/Workspace/Rust/ChumWorld/"

[node name="DGCDialog" type="FileDialog" parent="."]
margin_left = 8.0
margin_top = 47.0
margin_right = 408.0
margin_bottom = 447.0
rect_min_size = Vector2( 400, 400 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_text = "Data file to open"
mode = 0
access = 2
filters = PoolStringArray( "*.DGC;*.dgc;*.DPS;*.dps" )
current_dir = "/home/jellonator/Workspace/Rust/ChumWorld"
current_path = "/home/jellonator/Workspace/Rust/ChumWorld/"
[connection signal="confirmed" from="." to="." method="_on_ArchiveFileSelector_confirmed"]
[connection signal="pressed" from="Grid/NGCButton" to="." method="_on_NGCButton_pressed"]
[connection signal="pressed" from="Grid/DGCButton" to="." method="_on_DGCButton_pressed"]
[connection signal="file_selected" from="NGCDialog" to="." method="_on_NGCDialog_file_selected"]
[connection signal="file_selected" from="DGCDialog" to="." method="_on_DGCDialog_file_selected"]
